Add style improvements

--- a/src/stylesheets/CharacterInfo.scss
+++ b/src/stylesheets/CharacterInfo.scss
@@ -19,6 +19,8 @@
   margin: 5px;
 }
 .characterInfo {
-  background-color: rgb(65, 238, 224);
+  background-color: rgba(59, 226, 190, 0.6);
   color: white;
+  height: 100%;
+  width: 40%;
 }
