--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,3 +1,11 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  text-decoration: none;
+  color: white;
+}
+
 .App {
   height: 100%;
   width: 100%;
@@ -7,4 +15,6 @@
   justify-content: center;
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background: url("../images/estrellas-galaxia-fondo-cielo-espacio-exterior_146539-2211.jpg");
+  background-repeat: repeat;
 }
