--- a/src/stylesheets/CharacterList.scss
+++ b/src/stylesheets/CharacterList.scss
@@ -1,24 +1,27 @@
-.PokeList {
+.CharacterSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.CharacterList {
   width: 60%;
+  padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   column-gap: 20px;
   row-gap: 30px;
   list-style: none;
-
-  &__card {
-    width: 100%;
-    height: 100%;
-    background-color: rgb(240, 236, 236);
-    border: 2px solid grey;
-    border-radius: 5%;
-    margin: auto;
-    padding-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-transform: capitalize;
-  }
+}
+.notFound {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  width: 100%;
+  background-image: url("../images/background.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
 }
