--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -3,18 +3,21 @@
   padding: 0px;
   list-style: none;
   text-decoration: none;
-  color: white;
 }
 
 .App {
   height: 100%;
   width: 100%;
   padding: 20px;
+  background: url("../images/estrellas-galaxia-fondo-cielo-espacio-exterior_146539-2211.jpg");
+  background-repeat: repeat;
+}
+.wrapper {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background: url("../images/estrellas-galaxia-fondo-cielo-espacio-exterior_146539-2211.jpg");
-  background-repeat: repeat;
 }
