--- a/src/stylesheets/Character.scss
+++ b/src/stylesheets/Character.scss
@@ -1,20 +1,22 @@
 .card {
   width: 100%;
-  height: 100%;
-  background-color: rgba(57, 235, 137, 0.6);
+  height: 225px;
+  background-color: rgba(0, 176, 200, 0.5);
   border-radius: 5%;
-  margin: auto;
-  padding-bottom: 5px;
+  padding: 0;
+  padding: 10px 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  text-transform: capitalize;
-  color: white;
+  justify-content: space-evenly;
+  color: #becc51;
 
   &__img {
     width: 90%;
     border-radius: 5%;
-    padding: 5px;
+  }
+  &__name {
+    max-width: 140px;
+    text-align: center;
   }
 }
