--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -21,3 +21,34 @@
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+.logo {
+  margin: 20px 0;
+  width: 30%;
+  animation-name: zoomInOut;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  @keyframes zoomInOut {
+    from {
+      margin-right: 0%;
+      width: 30%;
+    }
+
+    25% {
+      margin-right: 3%;
+      width: 32%;
+    }
+    50% {
+      margin-right: 0%;
+      width: 30%;
+    }
+    75% {
+      margin-left: 3%;
+      width: 32%;
+    }
+    to {
+      margin-left: 0%;
+      width: 30%;
+    }
+  }
+}
