--- a/src/stylesheets/CharacterInfo.scss
+++ b/src/stylesheets/CharacterInfo.scss
@@ -1,3 +1,11 @@
+.characterInfo-wrapper {
+  height: 100vh;
+  background-image: url("../images/estrellas-galaxia-fondo-cielo-espacio-exterior_146539-2211.jpg");
+  background-repeat: repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 .characterInfo {
   display: flex;
   flex-direction: row;
@@ -6,10 +14,16 @@
   border-radius: 50px;
   background-color: rgba(59, 226, 190, 0.6);
   color: white;
-  margin: 150px 0 150px 0;
+  @media (max-width: 768px) {
+    margin: 0;
+  }
+
   &__img {
     padding-right: 10px;
     border-radius: 50px;
+    @media (max-width: 768px) {
+      width: 60%;
+    }
   }
   &__text {
     margin: 60px 5px 80px 5px;
@@ -19,5 +33,18 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 200px;
+    @media (max-width: 768px) {
+      font-size: 14px;
+      margin: 0;
+    }
+  }
+}
+
+.comeback {
+  text-decoration: none;
+  color: #becc51;
+  padding-bottom: 10px;
+  .icon {
+    transform: rotate(-90deg);
   }
 }
