--- a/src/stylesheets/CharacterList.scss
+++ b/src/stylesheets/CharacterList.scss
@@ -1,4 +1,5 @@
 .CharacterSection {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,29 +9,10 @@
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
   column-gap: 20px;
   row-gap: 30px;
   list-style: none;
-}
-.notFound {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  height: 60vh;
-  width: 800px;
-  background-image: url("../images/background.gif");
-  background-position: center;
-  background-repeat: no-repeat;
-  color: white;
-
-  &__title {
-    max-width: 100px;
-    margin-left: 160px;
-  }
-  &__text {
-    max-width: 230px;
-    margin-left: 110px;
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
   }
 }
