Add filter by specie

--- a/src/stylesheets/CharacterNotFound.scss
+++ b/src/stylesheets/CharacterNotFound.scss
@@ -32,6 +32,7 @@
     font-size: 30px;
     margin-left: 100px;
     margin-top: 70px;
+    color: black;
     @media (max-width: 768px) {
       margin: 0;
     }
