--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -7,6 +7,7 @@
 
 .App {
   height: 100%;
+  min-height: 800px;
   width: 100%;
   padding: 20px;
   background: url("../images/estrellas-galaxia-fondo-cielo-espacio-exterior_146539-2211.jpg");
@@ -21,62 +22,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-.logo {
-  margin: 20px 0;
-  animation-name: zoomInOut;
-  animation-duration: 5s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  @keyframes zoomInOut {
-    from {
-      margin-right: 0%;
-      width: 30%;
-    }
-
-    25% {
-      margin-right: 3%;
-      width: 32%;
-    }
-    50% {
-      margin-right: 0%;
-      width: 30%;
-    }
-    75% {
-      margin-left: 3%;
-      width: 32%;
-    }
-    to {
-      margin-left: 0%;
-      width: 30%;
-    }
-  }
-  @media (max-width: 768px) {
-    @keyframes zoomInOut {
-      from {
-        margin-right: 0%;
-        width: 70%;
-      }
-
-      25% {
-        margin-right: 5%;
-        width: 60%;
-      }
-      50% {
-        margin-right: 0%;
-        width: 70%;
-      }
-      75% {
-        margin-left: 5%;
-        width: 80%;
-      }
-      to {
-        margin-left: 0%;
-        width: 70%;
-      }
-    }
-  }
 }
