--- a/src/stylesheets/Filter.scss
+++ b/src/stylesheets/Filter.scss
@@ -1,5 +1,8 @@
 .form {
   color: #becc51;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @media (max-width: 768px) {
     display: flex;
     flex-direction: column;
@@ -16,5 +19,6 @@
     border-color: rgba(0, 176, 200, 1);
     border-radius: 5px;
     padding: 0 5px;
+    color: rgb(11, 75, 83);
   }
 }
