--- a/src/stylesheets/Character.scss
+++ b/src/stylesheets/Character.scss
@@ -3,7 +3,6 @@
   height: 225px;
   background-color: rgba(0, 176, 200, 0.5);
   border-radius: 5%;
-  padding: 0;
   padding: 10px 5px;
   display: flex;
   flex-direction: column;
@@ -24,4 +23,7 @@
     display: flex;
     justify-content: space-evenly;
   }
+}
+.card:hover {
+  transform: scale(1.1);
 }
