--- a/src/stylesheets/CharacterNotFound.scss
+++ b/src/stylesheets/CharacterNotFound.scss
@@ -1,27 +1,33 @@
 .notFound-wrapper {
-  height: 90vh;
+  height: 50vh;
   display: flex;
+  width: 100%;
   justify-content: flex-start;
-  padding-top: 15px;
+  margin-top: 50px;
   background-image: url("../images/background.gif");
   background-position: top;
   background-repeat: no-repeat;
+  &__comeback {
+    margin-left: 50px;
+    color: #becc51;
+  }
 }
 .notFound {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  padding-top: 50px;
+  padding-top: 120px;
   justify-content: space-around;
-  height: 65%;
+  height: 30%;
   width: 100%;
   color: white;
   @media (max-width: 768px) {
+    height: 80%;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding-top: 70px;
+    margin-right: 50px;
   }
-
   &__title {
     max-width: 100px;
     @media (max-width: 768px) {
@@ -33,16 +39,14 @@
     max-width: 200px;
     @media (max-width: 768px) {
       text-align: center;
-      margin: 80px 40px 0 0;
+      margin: 60px 0;
     }
   }
 
   &__error {
     text-align: center;
     font-size: 30px;
-    margin-left: 100px;
-    margin-top: 70px;
-    color: white;
+    margin-left: 40px;
     @media (max-width: 768px) {
       margin: 10px 30px 0 0;
     }
