--- a/src/stylesheets/CharacterList.scss
+++ b/src/stylesheets/CharacterList.scss
@@ -12,6 +12,7 @@
   column-gap: 20px;
   row-gap: 30px;
   list-style: none;
+  overflow-x: scroll;
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
   }
