--- a/src/stylesheets/Character.scss
+++ b/src/stylesheets/Character.scss
@@ -6,13 +6,21 @@
   padding: 10px 5px;
   display: flex;
   flex-direction: column;
+  margin: auto;
   align-items: center;
   justify-content: space-evenly;
   color: #becc51;
+  @media (max-width: 768px) {
+    height: 220px;
+    width: 180px;
+  }
 
   &__img {
     width: 90%;
     border-radius: 5%;
+    @media (max-width: 768px) {
+      width: 90%;
+    }
   }
   &__name {
     max-width: 140px;
