--- a/src/stylesheets/CharacterNotFound.scss
+++ b/src/stylesheets/CharacterNotFound.scss
@@ -2,7 +2,7 @@
   height: 50vh;
   display: flex;
   width: 100%;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 50px;
   background-image: url("../images/background.gif");
   background-position: top;
@@ -10,6 +10,9 @@
   &__comeback {
     margin-left: 50px;
     color: #becc51;
+    &--icon {
+      transform: rotate(-90deg);
+    }
   }
 }
 .notFound {
@@ -18,21 +21,19 @@
   padding-top: 120px;
   justify-content: space-around;
   height: 30%;
-  width: 100%;
+  width: 80%;
   color: white;
   @media (max-width: 768px) {
     height: 80%;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding-top: 70px;
-    margin-right: 50px;
+    padding-top: 140px;
   }
   &__title {
     max-width: 100px;
     @media (max-width: 768px) {
       text-align: center;
-      margin: 20px 20px 0 0;
     }
   }
   &__text {
